Modify SelectSchedulerDialogView and SelectSchedulerDialogViewModel to use ObservableList instead of ObjectProperty of Observable Lists. Changed bindDirectional to SetItems in ChoiceBox element.